# web-scraper

./: requirements.txt  streamlit.py
web_scraper/: README.md  pyproject.toml
web_scraper/src/web_scraper/: main.py
web_scraper/src/web_scraper/crews/image_summarizer/: image_summarizer.py
web_scraper/src/web_scraper/crews/image_summarizer/config/: agents.yaml  tasks.yaml
web_scraper/src/web_scraper/tools/: __init__.py  image_summarizer_tool.py
